rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bluegreen-rollout
  namespace: bluegreen-demo
  annotations:
    notifications.argoproj.io/subscribe.on-degraded.email.gmail: anushkas@cognam.com
spec:
  replicas: 2

  revisionHistoryLimit: 2
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: bluegreen-app

  template:
    metadata:
      labels:
        app: bluegreen-app

    spec:
      containers:
        - name: node-app
          image: anushkashukla003/node-app:b20b92925b5732b879fd9e1b9460bbfe5ddae87f
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

  strategy:
    blueGreen:
      activeService: active-service
      previewService: preview-service

      autoPromotionEnabled: false
