active-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: active-service
  namespace: bluegreen-demo
spec:
  selector:
    app: bluegreen-app
  ports:
    - port: 80
      targetPort: 3000
