active-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: active-ingress
  namespace: bluegreen-demo

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: active-service
                port:
                  number: 80
