preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: preview-ingress
  namespace: bluegreen-demo

  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /preview(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: preview-service
                port:
                  number: 80
